--- a/index.html
+++ b/index.html
@@ -144,8 +144,6 @@
 			</div>
 			<!-- Add Pagination -->
 		</div>
-
-		<!--=====================================================================-->
 		<div class="index-menu">
 			<div class="index-menu-item">
 				修手机Pad&nbsp;&nbsp;&nbsp;>
@@ -166,19 +164,181 @@
 		<div class="cate-list-sub">
 			<div class="cate-list-sub-inner">
 				<div class="cate-list-sub-item" id="fix-phone">
+					<!--caidang-->
+					<div id="cai">
+						<ul>
+							<li>屏幕 ></li>
+							<li>显示正常</li>
+							<li>屏幕不显示或花屏</li>
+							<li>屏幕触摸失灵</li>
+							<li>Pad更换屏幕</li>
+							<li>电池/充电</li>
+						</ul>
+					</div>
 
-					屏幕 > <br> 显示正常 屏幕不显示或花屏 屏幕触摸失灵 <br> Pad更换屏幕 电池/充电/开机 > <br> 电池问题 不开机 充电(连接)问题 按键 ><br> 开关机键失灵 Home键失灵 音量键失灵 按键故障 声音/震动 >
-					<br> 听筒问题 麦克风问题 外放扬声器问题 耳机插口故障 震动功能失效 音频故障 拍照/录像 >
-					<br>后摄像头无法拍照 前摄像头拍照故障 相机故障 外壳/边框 >
-					<br>后壳 中框变形 手机换彩壳 进水入液/主板故障 >
-					<br>进水入液 手机主板故障 其他故障 >
-					<br>软件升级/刷机 WiFi功能故障 手机信号问题 软件问题 个性化服务 >
-					<br> 点亮iPhone logo 蓝光护眼钢化膜 极透高清钢化膜 爱机深度清洁 手机换彩壳
+					<div id="cai">
+						<ul>
+							<li>开机 > </li>
+							<li>电池问题</li>
+							<li>不开机 充电(连接)问题</li>
+						</ul>
+					</div>
+
+					<div id="cai">
+						<ul>
+							<li>边框 ></li>
+							<li>后壳 中框变形</li>
+							<li>进水入液</li>
+							<li>前摄像头拍照故障</li>
+							<li>手机换彩壳 </li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li>主板故障 ></li>
+							<li>进水入液 </li>
+							<li>手机主板故障</li>
+
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li>其他故障 ></li>
+							<li>软件升级/刷机 WiFi功能故障 </li>
+							<li>手机信号问题</li>
+							<li>软件问题</li>
+							<li>点亮iPhone logo </li>
+							<li>极透高清钢化膜</li>
+
+						</ul>
+					</div>
+				</div>
+				<div class="cate-list-sub-item" id="fix-computer">
+					<div id="cai">
+						<ul>
+							<li>按键 ></li>
+							<li>开关机键失灵 Home键失灵</li>
+							<li>音量键失灵</li>
+							<li>按键故障 声音/</li>
+							<li>听筒问题</li>
+							<li>麦克风问题</li>
+							<li>外放扬声器问题</li>
+							<li>耳机插口故障</li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li>录像 ></li>
+							<li>后摄像头无法拍照</li>
+							<li>前摄像头拍照故障</li>
+							<li>相机故障 外壳/</li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li> 系统重装</li>
+							<li>电脑清灰</li>
+							<li>驱动安装 </li>
+							<li>游戏加速</li>
+							<li>故障修复 </li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li> 先锋 </li>
+							<li> PPTV</li>
+							<li> 小辣椒 </li>
+							<li>金立 </li>
+
+						</ul>
+					</div>
 
 				</div>
-				<div class="cate-list-sub-item" id="fix-computer">22222</div>
-				<div class="cate-list-sub-item" id="cell-phone">33333</div>
-				<div class="cate-list-sub-item" id="buy-phone">44444</div>
+				<div class="cate-list-sub-item" id="cell-phone">
+
+					<div id="cai">
+						<ul>
+							<li> 路由器调试</li>
+							<li>无法上网</li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li> 家庭局域网</li>
+							<li> 更换风扇 </li>
+							<li> 病毒查杀</li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li> 微软 </li>
+							<li> 摩托</li>
+							<li> 罗拉 </li>
+							<li>一加 </li>
+
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li>开机加速</li>
+							<li>网速优化</li>
+							<li>蓝屏死机</li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li>苹果</li>
+							<li> 三星 </li>
+							<li>小米</li>
+							<li> 华为 VIVO</li>
+							<li>OPPO</li>
+
+						</ul>
+					</div>
+				</div>
+				<div class="cate-list-sub-item" id="buy-phone">
+					<div id="cai">
+						<ul>
+							<li> 电脑没声音</li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li> 锤子</li>
+							<li> 酷派</li>
+							<li> 朵唯</li>
+							<li>诺基亚</li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li> TCL</li>
+							<li> 海信</li>
+							<li> 国美手机</li>
+							<li>努比亚</li>
+
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+
+							<li>魅族 </li>
+							<li>索尼 </li>
+							<li> 联想 </li>
+							<li> 中兴 </li>
+						</ul>
+					</div>
+					<div id="cai">
+						<ul>
+							<li> 电脑没声音</li>
+							<li> 黑莓</li>
+							<li> 美图秀秀</li>
+							<li>360手机</li>
+
+						</ul>
+					</div>
+
+				</div>
 			</div>
 		</div>
 
