--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 	<head>
@@ -138,8 +138,8 @@
 			<div class="index-banner">
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide"><img src="src/imge/t010277e84ce18b98b6.png" alt=""></div>
-						<div class="swiper-slide"><img src="src/imge/t01080757ebeb09256f.png" alt=""></div>
+						<div class="swiper-slide"><img src="src/imge/得的.jpg" alt=""></div>
+						<div class="swiper-slide"><img src="src/imge/我.png" alt=""></div>
 					</div>
 				</div>
 			</div>
@@ -166,7 +166,7 @@
 			<div class="cate-list-sub-inner">
 				<div class="cate-list-sub-item" id="fix-phone">
 					<!--caidang-->
-					<ul id="xiu1">
+					<ul id="xiu2two">
 
 					</ul>
 				</div>
@@ -304,17 +304,166 @@
 					<td><button id="btn">地图模式</button></td>
 				</tr>
 			</table>
-		</div>
-		<br />
-		<!--zhezhaocen=============================-->
-		<div id="zhezhao">
+			<!--zhezhaocen=============================-->
+			<div id="zhezhao">
+				<div id="container" tabindex="0"></div>
+				<div id='panel'></div>
+				<button style="height: 20px; width: 30px" id="stop">关闭</button>
+			</div>
+			<div id="youmian">
+				<!--zhezhaocen=============================-->
+				<div id="zhezhao">
 
-			<div id="container" tabindex="0"></div>
-			<div id='panel'></div>
-			<button id="stop">关闭</button>
-		</div>
+					<div id="container" tabindex="0"></div>
+					<div id='panel'></div>
+					<button id="stop">关闭</button>
+				</div>
+				<div class="first">
+					<h1>商家好评榜</h1>
+					<h2>①</h2>
+					<img src="http://p7.qhimg.com/edr/140__140/ss/30_105/t01ac02fad9b0458ec4.jpg" />
+					<div class="xin">
+						<p class="p1">联金诚维修中心</p>
+						<p class="p2">121978条评论</p>
+					</div>
+				</div>
+				<div class="two">
+					<h2>②</h2>
+					<img src="http://p9.qhimg.com/edr/140__140/ss/30_105/t017106a8e035ee20cd.jpg" />
+					<div class="xin">
+						<p class="p1">顺通电脑维修
+						</p>
+						<p class="p2">111985条评论</p>
+					</div>
+				</div>
+				<div class="two">
+					<h2>③</h2>
+					<img src="http://p4.qhimg.com/edr/140__140/ss/30_105/t01e711a21f9c1817ee.gif" />
+					<div class="xin">
+						<p class="p1">
+							盛宏维修工作室
+						</p>
+						<p class="p2">
+							98582条评论</p>
+					</div>
+				</div>
+				<div class="two">
+					<h2 style="color: #666666;">④
+                    </h2>
+					<img src="http://p0.qhimg.com/edr/140__140/ss/30_105/t015485b0b3d73024ab.jpg" />
+					<div class="xin">
+						<p class="p1">
+							百佳电脑维修
+						</p>
+						<p class="p2">
+							50689条评论</p>
+					</div>
+					<div class="two" style="height: 120px;margin-top: 30px;">
+						<h2 style="color: #666666;">⑤
+                    </h2>
+						<img src="http://p1.qhimg.com/edr/140__140/ss/30_105/t01d393b539d5466914.gif" />
+						<div class="xin">
+							<p class="p1">
+								鸿翔科技有限公司
+							</p>
+							<p class="p2">
+								32439条评论</p>
+						</div>
+					</div>
+					<div class="two" style="height: 120px;">
+						<h2 style="color: #666666;">⑥</h2>
+						<img src="http://p0.qhimg.com/edr/140__140/ss/30_105/t01153761b9a9fa7548.jpg" />
+						<div class="xin">
+							<p class="p1">
+								北京开天科技维修</p>
+							<p class="p2">15216条评论</p>
+						</div>
+					</div>
+					<div class="two" style="height: 120px;">
+						<h2 style="color: #666666;">⑦</h2>
+						<img src="http://p1.qhimg.com/edr/140__140/ss/30_105/t01d393b539d5466914.gif" />
+						<div class="xin">
+							<p class="p1">忠信电脑维修</p>
+							<p class="p2">12214条评论</p>
+						</div>
+					</div>
+				</div>
+				<!--golist-->
+				<div id="golist">
+					<h3><img src="http://p7.qhimg.com/edr/140__140/ss/30_105/t01ac02fad9b0458ec4.jpg"/></h3>
+					<ul id="oo">
+					</ul>
+				</div>
+				<hr id="hr1">
+				<p id="gg">进入店铺</p>
 
+				<!--golist2-->
+				<h3 id="h3"><img src="http://p0.qhimg.com/edr/140__140/ss/30_105/t0130c809906b96a2a1.jpg"/></h3>
+				<ul id="ul1">
+
+				</ul>
+				<hr id="hr2">
+				<p id="gg2">进入店铺</p>
+				<!--golist3-->
+				<h3 id="h3"><img src="http://p0.qhimg.com/edr/140__140/ss/30_105/t01f32edb876831c950.jpg"/></h3>
+				<ul id="ul2">
+				</ul>
+				<hr id="hr3">
+				<p id="gg2">进入店铺</p>
+				<!--golist4-->
+				<h3 id="h3"><img src="http://p3.qhimg.com/edr/140__140/ss/30_105/t0181a6c9ac0fccfb11.jpg"/></h3>
+				<ul id="ul3">
+				</ul>
+				<hr id="hr3">
+				<p id="gg3">进入店铺</p>
+				<!--golist5-->
+				<h3 id="h3"><img src="http://p0.qhimg.com/edr/140__140/ss/30_105/t01f24d69cb565ca9ee.jpg"/></h3>
+				<ul id="ul4">
+				</ul>
+				<!--<hr id="hr3">-->
+				<p id="gg3">进入店铺</p>
 	</body>
+
+	<script type="text/html" id="temp">
+		<%for (var i = 0; i <listObj.length; i++) {%>
+		<li>
+			<%=listObj[i].name%>
+		</li>
+		<%} %>
+	</script>
+	<script type="text/javascript">
+		$.getJSON("http://localhost:8080/list5.json", function(res) {
+			console.log(res);
+			var listObj = res.result;
+			console.log(listObj);
+
+			$("#ul4").html(baidu.template("temp", {
+				listObj: listObj
+			}))
+		})
+	</script>
+
+	<script type="text/html" id="temp">
+		<%for (var i = 0; i <listObj.length; i++) {%>
+		<li>
+			<%=listObj[i].name%>
+		</li>
+		<%} %>
+	</script>
+	<script type="text/html" id="temp">
+		<%for (var i = 0; i <listObj.length; i++) {%>
+		<li>
+			<%=listObj[i].name%>
+		</li>
+		<%} %>
+	</script>
+	<script type="text/html" id="temp">
+		<%for (var i = 0; i <listObj.length; i++) {%>
+		<li>
+			<%=listObj[i].name%>
+		</li>
+		<%} %>
+	</script>
 	<script type="text/html" id="tempthree">
 		<%for (var i = 0; i < xiu3Obj.length; i++) {%>
 		<li>
@@ -365,6 +514,14 @@
 		</li>
 		<%}%>
 	</script>
+	<script type="text/html" id="temp">
+		<%for (var i = 0; i <listObj.length; i++) {%>
+		<li>
+			<%=listObj[i].name%>
+		</li>
+		<%} %>
+	</script>
+
 	<script>
 		$(function() {
 			$("cate-sub").hover(function() {
@@ -453,19 +610,6 @@
 		})
 	</script>
 	<script type="text/javascript">
-		$.getJSON("http://localhost:8080/xiu1.json", function(res) {
-			console.log(res);
-			var xiuObj = res.result;
-			console.log(xiuObj);
-
-			$("#xiu1").html(baidu.template("temp", {
-				xiuObj: xiuObj
-			}))
-
-		})
-	</script>
-
-	<script type="text/javascript">
 		$.getJSON("http://localhost:8080/xiu2.json", function(res) {
 			console.log(res);
 			var xiu2Obj = res.result;
@@ -528,6 +672,50 @@
 		$("#stop").click(function() {
 			$("#zhezhao").hide();
 			$("#container").hide()
+		})
+	</script>
+	<script type="text/javascript">
+		$.getJSON("http://localhost:8080/list1.json", function(res) {
+			console.log(res);
+			var listObj = res.result;
+			console.log(listObj);
+
+			$("#oo").html(baidu.template("temp", {
+				listObj: listObj
+			}))
+		})
+	</script>
+	<script type="text/javascript">
+		$.getJSON("http://localhost:8080/list2.json", function(res) {
+			console.log(res);
+			var listObj = res.result;
+			console.log(listObj);
+
+			$("#ul1").html(baidu.template("temp", {
+				listObj: listObj
+			}))
+		})
+	</script>
+	<script type="text/javascript">
+		$.getJSON("http://localhost:8080/list3.json", function(res) {
+			console.log(res);
+			var listObj = res.result;
+			console.log(listObj);
+
+			$("#ul2").html(baidu.template("temp", {
+				listObj: listObj
+			}))
+		})
+	</script>
+	<script type="text/javascript">
+		$.getJSON("http://localhost:8080/list4.json", function(res) {
+			console.log(res);
+			var listObj = res.result;
+			console.log(listObj);
+
+			$("#ul3").html(baidu.template("temp", {
+				listObj: listObj
+			}))
 		})
 	</script>
 
